styled my contact page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="css/navigation.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="pages/contact.html">
 </head>
 <body>
     <nav>
@@ -26,6 +27,8 @@
             <p><strong>*Sales of Dogs</strong></p>
             <p><strong>*Pet Accessories</strong></p>
             </div> 
+
+            <a class="link" href="pages/contact.html">click here to contact us</a>
 
             <div>
                 <h1>quality for your money...</h1>
